# GestorDeArchivosPers

Backend/: .env  Cargo.toml
Backend/src/: config.rs  db.rs  errors.rs  main.rs
Backend/src/middleware/: auth.rs
Backend/src/models/: file.rs  user.rs
Backend/src/routes/: auth.rs  files.rs  mod.rs
Backend/src/utils/: jwt.rs  password.rs
frontend/: index.html  login.html  register.html
frontend/css/: styles.css
frontend/js/: app.js  auth.js
levantarBackend/: Guia Del proyecto
