[package]
name = "pcosew-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
env_logger = "0.11"
mongodb = "2"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.18", features = ["derive"] }
thiserror = "1"
futures = "0.3"

actix-multipart = "0.6"
mime_guess = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sanitize-filename = "0.5"
